cabal-version:   3.14
name:            webserver
version:         0.1.0.0
license:         NONE
author:          Unknown
maintainer:      Unknown
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable webserver
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.21.0.0,
        wai,
        warp,
        bytestring,
        directory,
        http-types,
        filepath,
        text
